log-output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output
spec:
  selector:
    app: log-output
  ports:
  - port: 80
    targetPort: 3000
