log-output/manifests/log-output-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
      - name: log-output
        image: mahansa/log-output:latest
        imagePullPolicy: if-not-present
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: log-output-service
spec:
  selector:
    app: log-output
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-output-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: log-output-service
            port:
              number: 80
